added input and button elements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <body>
         <h1>Giphy</h1>
 
+        <input placeholder="search for user" id="search-box " type="text"/> <button onclick="getGifs()" id="search-button">search</button>
+
         <section id="gif-container">
             <!-- Giphy Stuff Goes here -->
         </section>
